# DevBlog

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: app.py  config.py  constants.py  db.py  spotify.py
backend/schemas/: spotify.py
src/: app.py  constants.py  database.py  settings_app.py  settings_log.py  spotify.py  utils.py
src/schemas/: __init__.py  atlantmarket.py  schemas.py
