[tool.poetry]
name = "devblog"
version = "0.1.0"
description = "sandbox"
authors = ["Djimontyp <naumenko.maks.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.3"
fastapi = "^0.75.2"
sqlmodel = "^0.0.6"
python-dotenv = "^0.20.0"
spotipy = "^2.19.0"
uvicorn = "^0.17.6"
Faker = "^13.3.5"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
